# brownfield-cartographer

./: .env  .env.example  .gitignore  README.md  RECONNAISSANCE.md  app.py  main.py  map.html  pyproject.toml  run_hydrologist.py  test_lineage.py  test_or.py
.cartography/: CODEBASE.md  FDE_ONBOARDING_REPORT.md  README_SUMMARY.md  cartography_trace.jsonl  lineage_graph.json  module_graph.json
.cartography/brownfield-cartographer-ezaydi7a/: CODEBASE.md  ONBOARDING_REPORT.md  README_SUMMARY.md  cartography_trace.jsonl
.cartography/jaffle-shop/: CODEBASE.md  ONBOARDING_REPORT.md  README_SUMMARY.md  cartography_trace.jsonl
.cartography/ol-data-platform/: CODEBASE.md  ONBOARDING_REPORT.md  README_SUMMARY.md  cartography_trace.jsonl
src/: cli.py  main.py  orchestrator.py  ui.py
src/agents/: archivist.py  hydrologist.py  navigator.py  semanticist.py  surveyor.py
src/analyzers/: dag_config_parser.py  git_analyzer.py  python_data_flow.py  sql_lineage.py  tree_sitter_analyzer.py
src/graph/: knowledge_graph.py
src/models/: models.py
src/utils/: budget.py  repo_manager.py
