[project]
name = "brownfield-cartographer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gitpython>=3.1.46",
    "google-generativeai>=0.8.6",
    "langgraph>=1.0.10",
    "networkx>=3.6.1",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "pyvis>=0.3.2",
    "pyyaml>=6.0.3",
    "scipy>=1.17.1",
    "sqlglot>=29.0.1",
    "tree-sitter>=0.25.2",
    "tree-sitter-python>=0.25.0",
    "tree-sitter-sql>=0.3.11",
    "tree-sitter-yaml>=0.7.2",
    "tiktoken>=0.9.0",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.3.0",
    "openai>=2.26.0",
]
